10-Fargate-Profile-Basic/10-01-Fargate-Profile-Basic/kube-manifests/03-ALB-Ingress-SSL-Redirect-with-ExternalDNS.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress-service
  namespace: fp-dev
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ingress-fargate
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:225908212644:certificate/29e2f47f-f1c3-4776-847f-ba91c964cdb6
    alb.ingress.kubernetes.io/ssl-redirection: '443'
    external-dns.alpha.kubernetes.io/hostname: fpdev101.player-list.co.za
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-nodeport-service
                port:
                  number: 80
